@@ -1,7 +1,6 @@
 package com.zufar.onlinestore.common.exception.handler;
 
 import com.zufar.onlinestore.common.response.ApiResponse;
-import com.zufar.onlinestore.user.exception.UserAlreadyRegisteredException;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.logging.log4j.util.Strings;
 import org.springframework.context.support.DefaultMessageSourceResolvable;
@@ -11,6 +10,7 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -41,19 +41,12 @@ public class GlobalExceptionHandler {
     }
 
     private List<String> collectErrorMessages(Exception exception) {
-        if (exception instanceof UserAlreadyRegisteredException userAlreadyRegisteredException) {
-            return userAlreadyRegisteredException.getErrors();
-        }
-
-        if (exception instanceof MethodArgumentNotValidException methodArgumentNotValidException) {
-            return methodArgumentNotValidException
-                    .getBindingResult()
-                    .getAllErrors().stream()
-                    .map(DefaultMessageSourceResolvable::getDefaultMessage)
-                    .toList();
-        }
-
-        return List.of(exception.getMessage());
+        return exception instanceof MethodArgumentNotValidException methodArgumentNotValidException ?
+                methodArgumentNotValidException
+                        .getBindingResult()
+                        .getAllErrors().stream()
+                        .map(DefaultMessageSourceResolvable::getDefaultMessage)
+                        .toList() : Collections.singletonList(exception.getMessage());
     }
 
     private String buildErrorDescription(Exception exception) {
